--- a/04-JS/css/estilo.css
+++ b/04-JS/css/estilo.css
@@ -122,4 +122,26 @@ h1, h2, h3 {
     padding: 8px;
     margin-right: 1em;
 }
+
 /* Estilo para barra de progreso */
+.contenedor-stats {
+    width: 410px;
+}
+
+label {
+    display: inline-block;
+    width: 65px;
+    height: 25px;
+    font-weight: bold;
+    text-align: end;
+    vertical-align: top;
+}
+
+progress {
+    display: inline-block;
+    width: 300px;
+    height: 25px;
+    margin-left: 2em;
+    margin-right: auto;
+    clear: right;
+}
