--- a/04-JS/css/estilo.css
+++ b/04-JS/css/estilo.css
@@ -145,3 +145,23 @@ progress {
     margin-right: auto;
     clear: right;
 }
+
+/* Estilo de tarjetas de movimiento */
+.tarjeta-mov {
+    display: inline-block;
+    width: 155px;
+    height: 40px;
+    margin: 5px 15px;
+    background-color: #31a7f1;
+    border-radius: 15px;
+    text-align: center;
+    font-weight: bold;
+    padding: 1em;
+    box-shadow: 3px 3px 6px 2px rgba(0, 0, 0, 0.2);
+}
+
+#pantalla-mov {
+    justify-content: space-between;
+    overflow-y: auto;
+    column-count: 2;
+}
